--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url('img_girl.jpg');
+  background-image: url('https://c4.wallpaperflare.com/wallpaper/97/833/155/mountains-firewatch-green-forest-wallpaper-preview.jpg'); 
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
