--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ body {
   background-attachment: fixed;  
   background-size: cover;
 }
+  <body>
+  <div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+  </div>
+</body>
 </style>
 </head>
 <body>
