--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+  <link rel=“stylesheet” type=“text/css” href=“style.css”>.
 body {
   background-image: url('https://c4.wallpaperflare.com/wallpaper/97/833/155/mountains-firewatch-green-forest-wallpaper-preview.jpg'); 
   background-repeat: no-repeat;
