--- a/index.html
+++ b/index.html
@@ -2,26 +2,21 @@
 <html>
 <head>
 <style>
-  <link rel=“stylesheet” type=“text/css” href=“style.css”>.
 body {
-  background-image: url('https://c4.wallpaperflare.com/wallpaper/97/833/155/mountains-firewatch-green-forest-wallpaper-preview.jpg'); 
+  background-image: url('https://images.unsplash.com/photo-1617957796155-72d8717ac882?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); 
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
 }
-  <body>
-  <div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-  </div>
-</body>
+
+
+  
 </style>
 </head>
 <body>
 ​
 <h2>Background Cover</h2>
-​
+​font-family: Tahoma, sans-serif;
 <p>Set the background-size property to "cover" and the background image will cover the entire element, in this case the body element.</p>
 ​
 </body>
