--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ body {
 ​
 <h2>Background Cover</h2>
 ​font-family: Tahoma, sans-serif;
-<p>Set the background-size property to "cover" and the background image will cover the entire element, in this case the body element.</p>
+<p>Top Tsb Exploits!
+🔥 Bypass byfron
+🔒 AntiCheat bypass
+</p>
 ​
 </body>
 </html>
